Update homepage content and add Week 2 article

--- a/index.html
+++ b/index.html
@@ -4,14 +4,28 @@
   <meta charset="UTF-8">
   <title>Matthew Manokian</title>
 </head>
+
 <body>
 
+  <img src="images/house.jpg" alt="Homepage image">
+
   <h1>Matthew Manokian</h1>
-  <p>This website is published using GitHub Pages.</p>
 
   <p>
-    This site was created for a web development class assignment.
+    Hi, my name is Matthew. I’m a student learning web development and GitHub.
+    This site is part of my coursework where I practice HTML, CSS, and
+    version control.
   </p>
+
+  <article>
+    <h2>Week 2</h2>
+    <p>
+      In Week 2, I learned how to create branches in GitHub, make changes
+      without affecting the main branch, and submit pull requests for review.
+      I also learned how important clear commit messages are when collaborating
+      on projects.
+    </p>
+  </article>
 
 </body>
 </html>
