Link CSS and image to index.html

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Matthew Manokian</title>
+
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
   <h1>Matthew Manokian</h1>
   <p>This website is published using GitHub Pages.</p>
+  <p>This site was created for a web development class assignment.</p>
 
-  <p>
-    This site was created for a web development class assignment.
-  </p>
+  <!-- Image -->
+  <img src="images/house.jpg" alt="House image" width="300">
 
 </body>
 </html>
