--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
         <li class="nav-item">
           <a class="nav-link active" href="index.html">Home</a>
         </li>
-      </ul>
-    </div>
-  </div>
+
+    <li class="nav-item">
+      <a class="nav-link" href="grid.html">Grid</a>
+    </li>
+  </ul>
+</div>
+</div>
 </nav>
 
 <main class="container-fluid" style="padding-top: 80px;">
