--- a/index.html
+++ b/index.html
@@ -4,59 +4,77 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Matthew Manokian</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Matthew Manokian</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home</a>
-        </li>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Matthew Manokian</a>
 
-    <li class="nav-item">
-      <a class="nav-link" href="grid.html">Grid</a>
-    </li>
-  </ul>
-</div>
-</div>
-</nav>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarMain"
+        aria-controls="navbarMain"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<main class="container-fluid" style="padding-top: 80px;">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <img src="images/house.jpg" class="rounded img-fluid d-block" alt="Homepage image">
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="grid.html">Grid</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="carousel.html">Carousel</a>
+          </li>
+        </ul>
       </div>
+    </div>
+  </nav>
+
+  <main class="container" style="padding-top: 90px;">
+    <div class="row align-items-center mb-4">
+      <div class="col-md-6 text-center">
+        <img src="images/house.jpg" class="img-fluid rounded" alt="Homepage image">
+      </div>
+
       <div class="col-md-6">
-        <h1 class="display-5 fw-bold">Matthew Manokian: WEBD-225</h1>
+        <h1 class="display-5 fw-bold">
+          Matthew Manokian:<br>
+          WEBD-225
+        </h1>
       </div>
     </div>
 
-    <p class="mt-4">
-      Hi, my name is Matthew. I’m a student learning web development and GitHub.
+    <p class="mt-3">
+      Hi, my name is Matthew. I'm a student learning web development and GitHub.
       This site is part of my coursework where I practice HTML, CSS, and version control.
     </p>
 
     <article class="mt-4">
       <h2>Week 2</h2>
       <p>
-        In Week 2, I learned how to create branches in GitHub, make changes without
-        affecting the main branch, and submit pull requests for review. I also learned
-        how important clear commit messages are when collaborating on projects.
+        In Week 2, I learned how to create branches in GitHub, make changes without affecting the main branch,
+        and submit pull requests for review. I also learned how important clear commit messages are when collaborating on projects.
       </p>
     </article>
-  </div>
-</main>
+  </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
