--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Matthew Manokian</title>
+  <title>Home - Matthew Manokian</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -47,7 +49,7 @@
     </div>
   </nav>
 
-  <main class="container" style="padding-top: 90px;">
+  <main class="container pt-5 mt-5">
     <div class="row align-items-center mb-4">
       <div class="col-md-6 text-center">
         <img src="images/house.jpg" class="img-fluid rounded" alt="Homepage image">
@@ -55,7 +57,7 @@
 
       <div class="col-md-6">
         <h1 class="display-5 fw-bold">
-          Matthew Manokian:<br>
+          Matthew Manokian<br>
           WEBD-225
         </h1>
       </div>
