--- a/about.html
+++ b/about.html
@@ -1,63 +1,91 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Matthew Manokian: 225</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About - Matthew Manokian</title>
 
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet">
+  <link rel="icon" href="images/favicon.ico">
 </head>
 
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="index.html">Matthew Manokian</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Matthew Manokian</a>
+
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarMain"
+        aria-controls="navbarMain"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="grid.html">Grid</a></li>
-            <li class="nav-item"><a class="nav-link" href="components.html">Carousel</a></li>
-            <li class="nav-item active"><a class="nav-link" href="about.html">About</a></li>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="about.html">About</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="grid.html">Grid</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="carousel.html">Carousel</a>
+          </li>
         </ul>
+      </div>
     </div>
-</nav>
+  </nav>
 
-<main role="main" class="container-fluid mt-5 pt-4">
-    <div id="app"></div>
+  <main class="container pt-5 mt-5">
+    <header class="mb-4">
+      <h1 class="display-6 fw-bold">About Matthew</h1>
+      <p class="lead mb-0">
+        A quick bio and a little context about what this WEBD-225 site is for.
+      </p>
+    </header>
 
-    <script>
-        const user = {
-            name: 'Matthew Manokian',
-            imageUrl: 'images/img1.JPEG',
-            bio: 'I am a cybersecurity student who enjoys building practical projects and learning how systems work behind the scenes. I am focused on developing strong technical skills while staying consistent with school, fitness, and personal growth.'
-        };
+    <section class="row g-4 align-items-center">
+      <div class="col-md-4 text-center">
+        <img
+          src="images/img1.JPEG"
+          alt="Photo of Matthew Manokian"
+          class="img-fluid rounded-circle shadow-sm"
+          style="max-width: 220px;"
+        >
+      </div>
 
-        const element = React.createElement(
-            'div',
-            { className: 'text-center' },
-            React.createElement('h1', null, user.name),
-            React.createElement('img', {
-                src: user.imageUrl,
-                alt: user.name,
-                className: 'img-fluid rounded-circle my-3',
-                width: '200'
-            }),
-            React.createElement('p', { className: 'lead' }, user.bio)
-        );
+      <div class="col-md-8">
+        <div class="p-4 border rounded-3 bg-light">
+          <h2 class="h4">Bio</h2>
+          <p class="mb-3">
+            I am a cybersecurity student who enjoys building practical projects and learning how systems work behind the scenes.
+            I am focused on developing strong technical skills while staying consistent with school, fitness, and personal growth.
+          </p>
 
-        ReactDOM.render(element, document.getElementById('app'));
-    </script>
-</main>
+          <h2 class="h5">What I’m practicing on this site</h2>
+          <ul class="mb-0">
+            <li>Responsive layout with Bootstrap 5</li>
+            <li>Clean navigation and consistent styling across pages</li>
+            <li>GitHub workflow: branches, commits, and pull requests</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
